# cmake

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci-cmake.yml
src/: CMakeLists.txt  adder.cpp  adder.h
src/person/: CMakeLists.txt  person.cpp  person.hpp
src/zodiac/: CMakeLists.txt  zodiac.cpp  zodiac.hpp
test/: CMakeLists.txt  adderTest.cpp
test/fakes/: CMakeLists.txt  zodiacFake.cpp  zodiacFake.hpp
test/tests/: CMakeLists.txt  adderTest.cpp  personTest.cpp  zodiacTest.cpp
